--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Anna</string>
     <string name="error">Error</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
     <string name="ok">OK</string>
     <string name="signup">Sign up</string>
     <string name="Register">Register</string>
@@ -8,6 +10,7 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="confirmpassword">Confirm Password</string>
+    <string name="username">Username</string>
     <string name="haveAccount">Do you already have an account?</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="myroute">MY ROUTE</string>
