--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,6 +7,7 @@
     <string name="signup">Registrarse</string>
     <string name="Register">Registrarse</string>
     <string name="signin">Iniciar sesión</string>
+    <string name="collaborator">Collaborator</string>
     <string name="email">Email</string>
     <string name="password">Contraseña</string>
     <string name="confirmpassword">Confirmar contraseña</string>
