--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="signup">Sign up</string>
     <string name="Register">Register</string>
     <string name="signin">Sign in</string>
+    <string name="collaborator">Collaborator</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="confirmpassword">Confirm Password</string>
