--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -3,6 +3,7 @@
     <string name="error">Error</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
+    <string name="hi">Alo</string>
     <string name="ok">OK</string>
     <string name="signup">Sign up</string>
     <string name="Register">Register</string>
