--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,6 +3,7 @@
     <string name="error">Error</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
+    <string name="hi">Hola</string>
     <string name="ok">OK</string>
     <string name="signup">Registrarse</string>
     <string name="Register">Registrarse</string>
