--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -61,5 +61,12 @@
     <string name="userNotRegisteredFromSignIn"> This user is not registered. You should first sign up. </string>
     <string name="discount_activation">Discount Activation</string>
 
+    <string name="catalan">Catalan</string>
+    <string name="english">English</string>
+    <string name="spanish">Spanish</string>
+    <string name="italian">Italian</string>
+    <string name="french">French</string>
+    <string name="german">German</string>
+
 
 </resources>
