email verification done + password reset

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -52,6 +52,8 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="title_activity_menu_main">MenuMain</string>
 
+    <string name="forgetPassword"><u>Forgot your passowrd?</u></string>
+
 
     //ALERTS
     <string name="badPasswordAlert"> The introduced password is incorrect.</string>
