--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -68,5 +68,7 @@
     <string name="french">French</string>
     <string name="german">German</string>
 
+    <string name="forgetPassword"><u>Forgot your passowrd?</u></string>
+
 
 </resources>
