more advanced, now ready to add qr functioning to routes and discounts

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -27,18 +27,7 @@
     <string name="hint_subject">Sujeto</string>
     <string name="hint_message">Mensage</string>
     <string name="supportemail">annaApp.support@gmail.com</string>
-    <string name="santperedeponts"><b>Sant Pere de Ponts</b></string>
-    <string name="santamaria"><b>Santa Maria de Ponts</b></string>
-    <string name="condis"><b>Supermercat Condis</b></string>
-    <string name="homilies"><b>Homilies Organya</b></string>
-    <string name="naturlandia"><b>Naturlandia Andorra</b></string>
-    <string name="links_info">Link Informativo: </string>
-    <string name="linkSantPeredePonts"><u>https://www.ponts.cat/coneix-ponts/llocs-dinteres-1/sant-perte-de-ponts</u></string>
-    <string name="linkCondis"><u>https://en-gb.facebook.com/login/?next=https%3A%2F%2Fen-gb.facebook.com%2Fcondis.es%2Fposts%2F2970701349921804</u> </string>
-    <string name="linkSantaMaria"><u>https://www.ponts.cat/coneix-ponts/llocs-dinteres-1/santa-maria-de-ponts</u></string>
-    <string name="linkNaturlandia"><u>https://www.naturlandia.ad/es/inicio/?gclid=Cj0KCQjw6s2IBhCnARIsAP8RfAiarNqCVktH7U3dASDShmgS9kS2rlq8owCSysK7IBHDR7sNuj7jjikaAlcPEALw_wcB</u></string>
-    <string name="linkHomilies"><u>https://en.wikipedia.org/wiki/Homilies_d%27Organy%C3%A0</u></string>
-    <string name="sharedpreferencesfile">FILE_CREDENTIALS</string>
+
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -56,20 +45,20 @@
 
 
     //ALERTS
-    <string name="badPasswordAlert"> The introduced password is incorrect.</string>
-    <string name="passwordsNotEqual"> Passwords don\'t match. Please revalidate it.</string>
-    <string name="emailFieldCannotBeEmpty"> Email field can not be empty.</string>
-    <string name="SignInNotSuccessful"> It looks like signing in has not been successful. </string>
-    <string name="SignUpNotSuccessful"> It looks like signing up has not been successful. </string>
-    <string name="userNotRegisteredFromSignIn"> This user is not registered. You should first sign up. </string>
-    <string name="discount_activation">Discount Activation</string>
+    <string name="badPasswordAlert"> La contraseña introducida es incorrecta.</string>
+    <string name="passwordsNotEqual"> Las contraseñas introducidas no coinciden.</string>
+    <string name="emailFieldCannotBeEmpty"> El campo email no puede ser vacío.</string>
+    <string name="SignInNotSuccessful"> No se ha podido iniciar sesión correctamente. </string>
+    <string name="SignUpNotSuccessful"> No se ha podido registrar correctamente. </string>
+    <string name="userNotRegisteredFromSignIn"> Usuario no registrado. Debería registrarse primero </string>
+    <string name="discount_activation">Activación del descuento</string>
 
-    <string name="catalan">Catalan</string>
-    <string name="english">English</string>
-    <string name="spanish">Spanish</string>
-    <string name="italian">Italian</string>
-    <string name="french">French</string>
-    <string name="german">German</string>
+    <string name="catalan">Catalán</string>
+    <string name="english">Inglés</string>
+    <string name="spanish">Español</string>
+    <string name="italian">Italiano</string>
+    <string name="french">Francés</string>
+    <string name="german">Alemán</string>
 
 
 </resources>
