--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,44 +1,33 @@
 <resources>
     <string name="app_name">Anna</string>
     <string name="error">Error</string>
-    <string name="no">No</string>
-    <string name="yes">Yes</string>
+    <string name="no">Nein</string>
+    <string name="yes">Ja</string>
     <string name="hi">Hallo</string>
     <string name="ok">OK</string>
-    <string name="signup">Sign up</string>
-    <string name="Register">Register</string>
-    <string name="signin">Sign in</string>
+    <string name="signup">Anmelden</string>
+    <string name="Register">registrieren</string>
+    <string name="signin">Einloggen</string>
     <string name="email">Email</string>
-    <string name="password">Password</string>
-    <string name="confirmpassword">Confirm Password</string>
+    <string name="password">Passwort</string>
+    <string name="confirmpassword">Passwort bestätigen</string>
     <string name="username">Username</string>
-    <string name="collaborator">Collaborator</string>
-    <string name="haveAccount">Do you already have an account?</string>
+    <string name="collaborator">Mitarbeiter</string>
+    <string name="haveAccount">Haben Sie bereits ein Konto?</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="myroute">Routes</string>
+    <string name="myroute">Routen</string>
     <string name="discounts">Rabatte</string>
     <string name="faqs">Faqs</string>
-    <string name="ajustes">Settings</string>
-    <string name="contactus"><u>Need some help? Contact us!</u></string>
-    <string name="sendmailtitle">How can we help you?</string>
-    <string name="hint_email">Your email address here</string>
-    <string name="buttonsend">Send mail</string>
-    <string name="emailto">To</string>
-    <string name="hint_subject">Subject</string>
-    <string name="hint_message">Message</string>
+    <string name="ajustes">Einstellungen</string>
+    <string name="contactus"><u>Hilfe benötigen? Kontaktiere uns!</u></string>
+    <string name="sendmailtitle">Wie können wir Ihnen helfen?</string>
+    <string name="hint_email">Ihre E-Mail-Adresse hier</string>
+    <string name="buttonsend">Post senden</string>
+    <string name="emailto">Zu</string>
+    <string name="hint_subject">Thema</string>
+    <string name="hint_message">Nachricht</string>
     <string name="supportemail">annaApp.support@gmail.com</string>
-    <string name="santperedeponts"><b>Sant Pere de Ponts</b></string>
-    <string name="santamaria"><b>Santa Maria de Ponts</b></string>
-    <string name="condis"><b>Supermercat Condis</b></string>
-    <string name="homilies"><b>Homilies Organya</b></string>
-    <string name="naturlandia"><b>Naturlandia Andorra</b></string>
-    <string name="links_info">Link Informatiu: </string>
-    <string name="linkSantPeredePonts"><u>https://www.ponts.cat/coneix-ponts/llocs-dinteres-1/sant-perte-de-ponts</u></string>
-    <string name="linkCondis"><u>https://en-gb.facebook.com/login/?next=https%3A%2F%2Fen-gb.facebook.com%2Fcondis.es%2Fposts%2F2970701349921804</u> </string>
-    <string name="linkSantaMaria"><u>https://www.ponts.cat/coneix-ponts/llocs-dinteres-1/santa-maria-de-ponts</u></string>
-    <string name="linkNaturlandia"><u>https://www.naturlandia.ad/es/inicio/?gclid=Cj0KCQjw6s2IBhCnARIsAP8RfAiarNqCVktH7U3dASDShmgS9kS2rlq8owCSysK7IBHDR7sNuj7jjikaAlcPEALw_wcB</u></string>
-    <string name="linkHomilies"><u>https://en.wikipedia.org/wiki/Homilies_d%27Organy%C3%A0</u></string>
-    <string name="sharedpreferencesfile">FILE_CREDENTIALS</string>
+
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -47,29 +36,29 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Haus</string>
+    <string name="menu_home">Heim</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="title_activity_menu_main">MenuMain</string>
 
-    <string name="forgetPassword"><u>Forgot your passowrd?</u></string>
+    <string name="forgetPassword"><u>Passwort vergessen?</u></string>
 
 
     //ALERTS
-    <string name="badPasswordAlert"> The introduced password is incorrect.</string>
-    <string name="passwordsNotEqual"> Passwords don\'t match. Please revalidate it.</string>
-    <string name="emailFieldCannotBeEmpty"> Email field can not be empty.</string>
-    <string name="SignInNotSuccessful"> It looks like signing in has not been successful. </string>
-    <string name="SignUpNotSuccessful"> It looks like signing up has not been successful. </string>
-    <string name="userNotRegisteredFromSignIn"> This user is not registered. You should first sign up. </string>
-    <string name="discount_activation">Discount Activation</string>
+    <string name="badPasswordAlert"> Das eingegebene Passwort ist falsch.</string>
+    <string name="passwordsNotEqual">Passwörter stimmen nicht überein.</string>
+    <string name="emailFieldCannotBeEmpty"> Das E-Mail-Feld darf nicht leer sein.</string>
+    <string name="SignInNotSuccessful">Anmeldung war nicht erfolgreich. </string>
+    <string name="SignUpNotSuccessful">Anmeldung war nicht erfolgreich.</string>
+    <string name="userNotRegisteredFromSignIn"> Dieser Benutzer ist nicht registriert. Sie sollten sich zuerst anmelden. </string>
+    <string name="discount_activation">Rabattaktivierung</string>
 
-    <string name="catalan">Catalan</string>
-    <string name="english">English</string>
-    <string name="spanish">Spanish</string>
-    <string name="italian">Italian</string>
-    <string name="french">French</string>
-    <string name="german">German</string>
+    <string name="catalan">Katalanisch</string>
+    <string name="english">Englisch</string>
+    <string name="spanish">Spanisch</string>
+    <string name="italian">Italienisch</string>
+    <string name="french">Französisch</string>
+    <string name="german">Deutsch</string>
 
 
 </resources>
