StartedRoutes + CompletedRoutes + Subscription status function no more an option

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -59,4 +59,7 @@
     <string name="french">Francès</string>
     <string name="german">Alemany</string>
 
+    <string name="stationVerified">The station has been verified successfully</string>
+    <string name="stationRejected">The station has not been recognized</string>
+
 </resources>
