--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -60,5 +60,8 @@
     <string name="french">Französisch</string>
     <string name="german">Deutsch</string>
 
+    <string name="stationVerified">The station has been verified successfully</string>
+    <string name="stationRejected">The station has not been recognized</string>
+
 
 </resources>
