--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -147,6 +147,9 @@ ads will not appear in order so the last posted are on the top.</string>
     <string name="paymentSuccess">Payment successful!</string>
     <string name="visited">Visited</string>
     <string name="notVisited">Not visited yet</string>
+    <string name="deleteConfirmation">Are you sure you want to delete this ad ? It will be deleted from our databases as well.</string>
+    <string name="deleteConfirmationTitle">Delete Confirmation</string>
+
 
 
 
