--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,5 +146,7 @@ ads will not appear in order so the last posted are on the top.</string>
 
     <string name="visited">Visited</string>
     <string name="notVisited">Not visited yet</string>
+    <string name="deleteConfirmation">Are you sure you want to delete this ad ? It will be deleted from our databases as well.</string>
+    <string name="deleteConfirmationTitle">Delete Confirmation</string>
 
 </resources>
